[gd_scene load_steps=13 format=3 uid="uid://j7kdpfxltq4j"]

[ext_resource type="PackedScene" uid="uid://bf66yigpmnvq4" path="res://SCENES/CRAFT_STATION/station_background.tscn" id="1_8q7v8"]
[ext_resource type="Script" path="res://SCRIPTS/CRAFT_STATION/bracelet_station.gd" id="1_opsq7"]
[ext_resource type="PackedScene" uid="uid://1guuvhm3f7g" path="res://SCENES/CRAFT_STATION/bracelet_info_panel.tscn" id="3_cnyhi"]
[ext_resource type="PackedScene" uid="uid://dlvsne80igil2" path="res://SCENES/CRAFT_STATION/bracelet_construction_panel.tscn" id="4_2dhfs"]
[ext_resource type="PackedScene" uid="uid://bqmyglx3n5yyp" path="res://SCENES/CRAFT_STATION/complete_bracelet_panel.tscn" id="5_r3loc"]
[ext_resource type="PackedScene" uid="uid://juk37sd2sdfi" path="res://SCENES/CRAFT_STATION/bead_set.tscn" id="6_kjoem"]
[ext_resource type="PackedScene" uid="uid://cnmwa28t8wyv3" path="res://SCENES/CRAFT_STATION/play_button.tscn" id="6_wxw32"]
[ext_resource type="PackedScene" uid="uid://cmerjff0e20um" path="res://SCENES/CRAFT_STATION/bead_pile.tscn" id="7_atnpg"]
[ext_resource type="Resource" uid="uid://c81ojbagj28o1" path="res://RESOURCES/test_bead_pile.tres" id="9_crcei"]
[ext_resource type="PackedScene" uid="uid://45xgooudgaro" path="res://SCENES/CRAFT_STATION/discard_button.tscn" id="10_r73u2"]
[ext_resource type="PackedScene" uid="uid://dgcnerkvrs865" path="res://SCENES/run_info_button.tscn" id="12_b481e"]
[ext_resource type="PackedScene" uid="uid://b0qf7jypiefqa" path="res://SCENES/GUI/station_ui.tscn" id="13_vg1c5"]

[node name="BraceletStation" type="Node"]
script = ExtResource("1_opsq7")

[node name="Background" parent="." instance=ExtResource("1_8q7v8")]

[node name="PlayingField" type="Node2D" parent="."]

[node name="InfoPanel" parent="PlayingField" instance=ExtResource("3_cnyhi")]
offset_left = 127.0
offset_top = 147.0
offset_right = 127.0
offset_bottom = 147.0

[node name="BraceletPanel" parent="PlayingField" instance=ExtResource("4_2dhfs")]

[node name="CompleteBraceletPanel" parent="PlayingField" instance=ExtResource("5_r3loc")]
position = Vector2(1153, 147)

[node name="PlayButton" parent="PlayingField" instance=ExtResource("6_wxw32")]

[node name="SelectionPanel" parent="PlayingField" instance=ExtResource("6_kjoem")]
position = Vector2(640, 425)

[node name="DiscardButton" parent="PlayingField" instance=ExtResource("10_r73u2")]
offset_left = 47.0
offset_top = 370.0
offset_right = 207.0
offset_bottom = 480.0

[node name="DiscardPile" parent="PlayingField" instance=ExtResource("7_atnpg")]
z_index = 1
position = Vector2(127, 600)

[node name="Container" parent="PlayingField/DiscardPile/Beads" index="0"]
modulate = Color(0.281187, 0.281187, 0.281187, 1)

[node name="HandPanel" parent="PlayingField" instance=ExtResource("6_kjoem")]
position = Vector2(640, 600)

[node name="DrawPile" parent="PlayingField" instance=ExtResource("7_atnpg")]
position = Vector2(1153, 600)
bead_array_info = ExtResource("9_crcei")

[node name="RunInfoButton" parent="PlayingField" instance=ExtResource("12_b481e")]
offset_left = 1081.0
offset_top = 396.0
offset_right = 1217.0
offset_bottom = 457.0

[node name="StationUI" parent="." instance=ExtResource("13_vg1c5")]

[connection signal="pressed" from="PlayingField/PlayButton" to="." method="_on_play_pressed"]
[connection signal="bead_clicked" from="PlayingField/SelectionPanel" to="." method="_on_selection_panel_bead_clicked"]
[connection signal="pressed" from="PlayingField/DiscardButton" to="." method="_on_discard_pressed"]
[connection signal="bead_clicked" from="PlayingField/HandPanel" to="." method="_on_hand_panel_bead_clicked"]

[editable path="PlayingField/DiscardPile"]
[editable path="StationUI"]
